# BD2-proyecto

./: CMakeLists.txt  Dockerfile  README.md  SequentialFile.cpp  SequentialFile.h  ast.dot  data.csv  datos_personas_100k.csv  docker-compose.yml  main.cpp  run_all_inputs.py  server.py
FRONT-SQL/: DockerFile  server.py  server_1.py
FRONT-SQL/src/: App.tsx
Files/: SequentialFile.cpp  SequentialFile.h
Index/: BPTree.h  ExtendibleHashing.h  Leaf.cc  Leaf.h  Node.cc  Node.h
PARSERSQL/: CMakeLists.txt  main.cpp
PARSERSQL/Index/: BPTree.h
PARSERSQL/outputs/: ast.dot
PARSERSQL/pruebas/: pruebaRTree.cpp
PARSERSQL/rtree/: Rtree_helpers.cpp
Parser/: scanner.cpp  visitor.cpp  visitor.h
Proyecto/: CMakeLists.txt  Dockerfile  main.cpp
Proyecto/Files/: SequentialFile.cpp  SequentialFile.h
Proyecto/Index/: BPTree.cpp  BPTree.h  ExtendibleHashing.h
Proyecto/Parser/: disk_counter.cpp  disk_counter.h  parser.h  visitor.cpp  visitor.h
Proyecto/outputs/: tokens.txt
Proyecto/rtree/: MiPagedDiskStorageManager.h  Rtree_helpers.h
archivos/: hola.indexes  hola_edad.btree  hola_edad.ehash  lugares.indexes  lugares.schema  lugares_ubicacion.rtree
input/: input.txt
inputs/: data.csv  input0.txt  input1.txt  input2.txt  input3.txt  input4.txt  input5.txt
outputs/: ast.dot  output.txt  output0.txt  output1.txt  output2.txt  output3.txt  output4.txt  output5.txt  tokens.txt
pruebas/: pruebaBPTree.cpp  pruebaEHashing.cpp  pruebaRTree.cpp
rtree/: CMakeLists.txt  main.cpp
src/: App.tsx
web-app/: package-lock.json  package.json
web-app/src/: App.tsx
